# Kavaro_Desktop

./: CMakeLists.txt  extract_cpp.py  qrc.qrc
qml/: main.qml
qml/Dashboard/: CommandCenter.qml
src/: FinancialDashboard.cpp  FinancialDashboard.h  main.cpp  split.py
src/Auth/login/: login.cpp  login.h
src/Screens/Dashboard/: FinancialDashboard.cpp  FinancialDashboard.h
src/Screens/Dashboard/Components/: Sidebar.cpp  Sidebar.h  TopNavbar.cpp  TopNavbar.h
src/Screens/Dashboard/Components/AllOrders/: FilterBar.cpp  FilterBar.h  OrderTable.cpp  OrderTable.h  PaginationBar.cpp  PaginationBar.h
src/Screens/Dashboard/Components/AllOrders/AddOrder/: AddOrderDialog.cpp  AddOrderDialog.h
src/Screens/Dashboard/Components/OverviewPage/: LineChart.cpp  LineChart.h  MetricCard.cpp  MetricCard.h  MiniCalendar.cpp  MiniCalendar.h  OrderStatusChart.cpp  OrderStatusChart.h  RecentOrdersTable.cpp  RecentOrdersTable.h  StatusBarChart.cpp  StatusBarChart.h
src/Screens/Dashboard/Pages/: AllOrdersPage.cpp  AllOrdersPage.h  OverviewPage.cpp  OverviewPage.h  STLUploadsPage.cpp  STLUploadsPage.h
